--- a/Style.css
+++ b/Style.css
@@ -12,6 +12,11 @@
     color: #333;
     padding: 20px;
   }
+  nav {
+    background-color: #333;
+    padding: 10px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+}
   
   /* Navbar styles */
   nav ul {
@@ -27,11 +32,16 @@
     margin: auto;
     font-style: normal;
     nav-left: auto;
-    margin-left: 2px;
+    margin-left: 5px;
+    
+
+    font-size: 18px;
+    
+    
   }
   
   nav ul li a {
-    color: #fff;
+    color: #f4f0f0;
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
     padding: 10px 20px;
@@ -50,38 +60,25 @@
     margin: 10px 0;
   }
   
-  /* Flexbox container */
-  .flex-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-  }
   
-  .flex-item {
-    background-color: #e7e7e7;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Grid container */
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-top: 20px;
-  }
-  
-  .grid-item {
-    background-color: #e7e7e7;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Basic heading styles */
+ 
   h1 {
+    font-family: 'Courier New', Courier, monospace;
     color: #801f1f;
     margin-bottom: 20px;
   }
+  .flex-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.flex-item {
+    flex: 1;
+    background-color: #e4e4e4;
+    padding: 20px;
+    margin: 10px;
+}
+
+
   
