--- a/Style.css
+++ b/Style.css
@@ -22,6 +22,21 @@
     transform: scale(1.1);
 
   }
+  .about____image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+    animation: fadeinscale 2s ease-in-out;
+   }
+
+  .about__image:hover {
+    transform: scale(1.1); /* Slight zoom effect */
+    opacity: 1;
+  }
+
+  
   .image_home{
 
     font-weight: 100;
